{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 11,
  "lineage": "d81ca35c-3944-d396-4543-294cc8a4b435",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "edr_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03fa0d43142b42b38",
            "association_id": "eipassoc-0ea7a3c03f566bd33",
            "domain": "vpc",
            "id": "eipalloc-03fa0d43142b42b38",
            "instance": "i-08620cd6f0901853c",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0f26328d5fb441dfe",
            "private_dns": "ip-192-168-20-225.ap-southeast-1.compute.internal",
            "private_ip": "192.168.20.225",
            "public_dns": "ec2-18-139-87-21.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "18.139.87.21",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EDR EIP"
            },
            "tags_all": {
              "Name": "EDR EIP"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.edr_server",
            "aws_key_pair.public_key",
            "aws_security_group.edr_sg",
            "aws_subnet.edr_subnet",
            "aws_vpc.edr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "edr_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00d785f1c099d5a0e",
            "arn": "arn:aws:ec2:ap-southeast-1:750897108520:instance/i-08620cd6f0901853c",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08620cd6f0901853c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "Dom-AWS-Keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f26328d5fb441dfe",
            "private_dns": "ip-192-168-20-225.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.20.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 180,
                "throughput": 0,
                "volume_id": "vol-0198552304b5d50a6",
                "volume_size": 60,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0a8e3af109045017b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c01a935e9dcaf653",
            "tags": {
              "Environment": "CB-Demo",
              "Name": "EDR"
            },
            "tags_all": {
              "Environment": "CB-Demo",
              "Name": "EDR"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a8e3af109045017b"
            ]
          },
          "dependencies": [
            "aws_key_pair.public_key",
            "aws_security_group.edr_sg",
            "aws_subnet.edr_subnet",
            "aws_vpc.edr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "edr_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:750897108520:internet-gateway/igw-00e1ddd0334b19a1b",
            "id": "igw-00e1ddd0334b19a1b",
            "owner_id": "750897108520",
            "tags": {
              "Environment": "CB_Demo",
              "Name": "EDR VPC IGW"
            },
            "tags_all": {
              "Environment": "CB_Demo",
              "Name": "EDR VPC IGW"
            },
            "vpc_id": "vpc-07c0cb912ba4deb1c"
          },
          "dependencies": [
            "aws_vpc.edr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "edr_rt_assocation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bf3f6e817bd69047",
            "original_route_table_id": "rtb-0b1ac89e6939a0541",
            "route_table_id": "rtb-0994f04b09b92e220",
            "vpc_id": "vpc-07c0cb912ba4deb1c"
          },
          "dependencies": [
            "aws_internet_gateway.edr_igw",
            "aws_route_table.edr_rt",
            "aws_vpc.edr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "edr_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:750897108520:route-table/rtb-0994f04b09b92e220",
            "id": "rtb-0994f04b09b92e220",
            "owner_id": "750897108520",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00e1ddd0334b19a1b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "CB_Demo",
              "Name": "EDR VPC RT"
            },
            "tags_all": {
              "Environment": "CB_Demo",
              "Name": "EDR VPC RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c0cb912ba4deb1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.edr_igw",
            "aws_vpc.edr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo_rt_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0328f4627bd276e7f",
            "route_table_id": "rtb-0994f04b09b92e220",
            "subnet_id": "subnet-0c01a935e9dcaf653"
          },
          "dependencies": [
            "aws_internet_gateway.edr_igw",
            "aws_route_table.edr_rt",
            "aws_subnet.edr_subnet",
            "aws_vpc.edr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "edr_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:750897108520:security-group/sg-0a8e3af109045017b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8e3af109045017b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Agent Comms",
                "from_port": 41002,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 41002
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RDP to Win Server",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "EDR SG",
            "name_prefix": "",
            "owner_id": "750897108520",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EDR SG"
            },
            "tags_all": {
              "Name": "EDR SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-07c0cb912ba4deb1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.edr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "edr_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:750897108520:subnet/subnet-0c01a935e9dcaf653",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "192.168.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c01a935e9dcaf653",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750897108520",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "CB_Demo",
              "Name": "EDR Subnet"
            },
            "tags_all": {
              "Environment": "CB_Demo",
              "Name": "EDR Subnet"
            },
            "vpc_id": "vpc-07c0cb912ba4deb1c"
          },
          "dependencies": [
            "aws_vpc.edr_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "edr_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:750897108520:vpc/vpc-07c0cb912ba4deb1c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.20.0/24",
            "default_network_acl_id": "acl-03d00b04655b38338",
            "default_route_table_id": "rtb-0b1ac89e6939a0541",
            "default_security_group_id": "sg-0578a72e32480bbfe",
            "dhcp_options_id": "dopt-b6c35fd2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07c0cb912ba4deb1c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b1ac89e6939a0541",
            "owner_id": "750897108520",
            "tags": {
              "Environment": "CB_Demo",
              "Name": "EDR VPC"
            },
            "tags_all": {
              "Environment": "CB_Demo",
              "Name": "EDR VPC"
            }
          }
        }
      ]
    }
  ]
}